--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: BUILDBOT
+name: BUILDBOT 
 
 on:
   push:
@@ -22,7 +22,7 @@ jobs:
           python_ver: '3.12'
           spec: 'src/build.spec'
           upload_exe_with_name: 'Dark_Souls_3_Save_Editor_WIN64'
-
+ 
   build-windows-32bit:
     runs-on: windows-latest
     steps:
@@ -42,9 +42,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pyinstaller
-
       - name: Create Windows Executable (32-bit)
-        run: pyinstaller src/build_win32.spec  # No additional-hooks-dir needed
+        run: |
+          pyinstaller src/build_win32.spec
         env:
           PYTHONPATH: ${{ runner.workspace }}/src
 
@@ -63,21 +63,12 @@ jobs:
       - name: Install Python dependencies
         run: pip install cryptography
 
-      - name: Install PyInstaller
-        run: |
-          python -m pip install --upgrade pip
-          pip install pyinstaller
-
       - name: Create Linux Executable
-        run: pyinstaller src/build.spec  # No additional-hooks-dir needed
-        env:
-          PYTHONPATH: ${{ runner.workspace }}/src
-
-      - name: Upload Linux Executable
-        uses: actions/upload-artifact@v4
+        uses: sayyid5416/pyinstaller@v1
         with:
-          name: Dark_Souls_3_Save_Editor_LINUX_x86_64
-          path: dist/Dark_Souls_3_Save_Editor_LINUX_x86_64
+          python_ver: '3.12'
+          spec: 'src/build.spec'
+          upload_exe_with_name: 'Dark_Souls_3_Save_Editor_LINUX_x86_64'
 
   build-macos_silicon:
     runs-on: macos-latest
@@ -101,11 +92,10 @@ jobs:
           python3 -m pip install --upgrade pip  # Ensure pip is upgraded in the virtual environment
           python3 -m pip install pyinstaller  # Install PyInstaller inside the virtual environment
           python3 -m pip --version  # Debug: Check pip version
-
       - name: Create macOS Executable
         run: |
           source venv/bin/activate  # Activate the virtual environment
-          pyinstaller src/build_mac.spec  # No additional-hooks-dir needed
+          pyinstaller src/build_mac.spec
           # Debug the dist directory to verify output structure
           echo "Listing contents of dist/ directory:"
           ls -R dist/
@@ -154,12 +144,11 @@ jobs:
           python3 -m pip install --upgrade pip  # Ensure pip is upgraded in the virtual environment
           python3 -m pip install pyinstaller  # Install PyInstaller inside the virtual environment
           python3 -m pip --version  # Debug: Check pip version
-
       - name: Create macOS Intel Executable
         run: |
           source venv/bin/activate  # Activate the virtual environment
           # Set environment variables to build for Intel architecture (x86_64)
-          arch -x86_64 pyinstaller src/build_mac.spec  # No additional-hooks-dir needed
+          arch -x86_64 pyinstaller src/build_mac.spec
           # Debug the dist directory to verify output structure
           echo "Listing contents of dist/ directory:"
           ls -R dist/
